--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
+      "source": "/api/tasks/:path*",
       "destination": "/backend/server.js"
     },
     {
